Migrate Fabric 1.20.1 to stable Banira integration